--- a/w3/style.css
+++ b/w3/style.css
@@ -4,7 +4,7 @@ html, body{
     display: flex;
     justify-content: center;
     background-image: url("images/waves.png") ;
-    font-family: cursive;
+    font-family: 'Courier New', Courier, monospace;
     
 }
 #container{
