--- a/Week5Lab/css/style.css
+++ b/Week5Lab/css/style.css
@@ -1,19 +1,18 @@
-/*css goes here*/
+/*CSS goes here*/
 
-html, body{
+html,body{
     height: 100%;
     margin: 0;
-
 }
 
 body{
     display: flex;
     justify-content: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Syne Mono', monospace;
 }
 
 #container{
-    width: 1000px;
+    width:1000px;
     background-color: tomato;
     padding: 10px;
 }
@@ -33,12 +32,11 @@ main{
     display: flex;
     justify-content: center;
     padding: 10px;
-
 }
 
 canvas{
     background-color: white;
-    border: 1px solid black;
+    border:1px solid black;
     margin-bottom: 10px;
 }
 
